Add ondd and tools-pkg as submodules
Signed-off-by: N Ford <nford@....com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "buildroot"]
 	path = buildroot
 	url = https://github.com/WestPond/buildroot.git
+[submodule "tools/pkg"]
+	path = tools/pkg
+	url = https://github.com/WestPond/tools-pkg.git
+[submodule "apps/ondd"]
+	path = apps/ondd
+	url = https://github.com/WestPond/ondd.git
