Wrong crosstool config, update to correct
Signed-off-by: N Ford <nford@....com>

--- a/crosstool-ng.config
+++ b/crosstool-ng.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # crosstool-NG 1.20.0 Configuration
-# Fri Dec  5 11:31:47 2014
+# Thu Dec  4 09:43:37 2014
 #
 CT_CONFIGURE_has_make381=y
 CT_CONFIGURE_has_xz=y
@@ -116,7 +116,7 @@ CT_ARCH_LE=y
 CT_ARCH_32=y
 # CT_ARCH_64 is not set
 CT_ARCH_BITNESS=32
-CT_ARCH_FLOAT_HW=y
+# CT_ARCH_FLOAT_HW is not set
 # CT_ARCH_FLOAT_SW is not set
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
@@ -157,8 +157,8 @@ CT_ARCH_ENDIAN="little"
 # Target optimisations
 #
 # CT_ARCH_FLOAT_AUTO is not set
-# CT_ARCH_FLOAT_SOFTFP is not set
-CT_ARCH_FLOAT="hard"
+CT_ARCH_FLOAT_SOFTFP=y
+CT_ARCH_FLOAT="softfp"
 
 #
 # arm other options
@@ -169,7 +169,6 @@ CT_ARCH_ARM_MODE_ARM=y
 # CT_ARCH_ARM_INTERWORKING is not set
 CT_ARCH_ARM_EABI_FORCE=y
 CT_ARCH_ARM_EABI=y
-CT_ARCH_ARM_TUPLE_USE_EABIHF=y
 
 #
 # Toolchain options
@@ -599,6 +598,10 @@ CT_PPL_V_0_11_2=y
 CT_PPL_VERSION="0.11.2"
 CT_PPL_0_11=y
 CT_PPL_NEEDS_LIBPWL=y
+# CT_ISL_V_0_12_2 is not set
+# CT_ISL_V_0_11_1 is not set
+# CT_CLOOG_V_0_18_1 is not set
+# CT_CLOOG_V_0_18_0 is not set
 CT_CLOOG_V_0_15_11=y
 CT_CLOOG_VERSION="0.15.11"
 CT_CLOOG_NEEDS_AUTORECONF=y
