Get cross-compiler path from buildroot configs
Signed-off-by: N Ford <nford@....com>

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,11 +1,13 @@
 TOP_DIR := $(shell readlink -f $(TOP_DIR)/..)
--include $(TOP_DIR)/Makefile.config
 
 O ?= $(TOP_DIR)/buildroot/output
 STAGING_DIR := $(O)/staging
 TARGET_DIR := $(O)/target
 IMAGES_DIR := $(O)/images
 HOST_DIR := $(O)/host
+
+include $(TOP_DIR)/buildroot/.config
+CROSS_COMPILE ?= $(strip $(subst ",,$(BR2_TOOLCHAIN_EXTERNAL_PATH)/bin/$(BR2_TOOLCHAIN_EXTERNAL_PREFIX)-))
 
 SYSROOT := --sysroot=$(O)/staging
 
