Updated Librarian to v0.2
Also using master sdist with Pillar-specific patches

--- a/apps/librarian/Makefile
+++ b/apps/librarian/Makefile
@@ -1,9 +1,8 @@
 TOP_DIR := $(shell pwd)
 -include $(TOP_DIR)/../Makefile.in
 
-PKG_REL = v0.1
-PKG_VERSION = 0.1-pillar.0
-PKG_URL = https://github.com/Outernet-Project/librarian/releases/download/$(PKG_REL)/librarian-$(PKG_VERSION).tar.gz
+PKG_VERSION = 0.2
+PKG_URL = https://github.com/Outernet-Project/librarian/releases/download/v$(PKG_VERSION)/librarian-$(PKG_VERSION).tar.gz
 PKG_TGZ = librarian-$(PKG_VERSION).tar.gz
 
 STAMP_UNPACKED = librarian/.stamp_unpacked
@@ -24,6 +23,8 @@ $(PKG_TGZ):
 	wget $(PKG_URL) -O librarian-$(PKG_VERSION).tar.gz
 
 install: $(STAMP_BUILT)
+	( cd librarian && patch -p1 < ../pillar-config.patch )
+	( cd librarian && patch -p1 < ../pillar-version.patch )
 	( cd librarian && PATH="$(HOST_DIR)/bin:$(HOST_DIR)/sbin:$(HOST_DIR)/usr/bin:$(HOST_DIR)/usr/sbin:$(PATH)" \
 	PYTHONPATH="$(TARGET_DIR)/usr/lib/python2.7/sysconfigdata/:$(TARGET_DIR)/usr/lib/python2.7/site-packages/" \
 	_python_sysroot=$(HOST_DIR)/usr/arm-buildroot-linux-gnueabi/sysroot \
