Fixed missing filedir override

--- a/apps/librarian/librarian.ini
+++ b/apps/librarian/librarian.ini
@@ -19,6 +19,7 @@ path = /mnt/data/librarian
 
 [content]
 spooldir = /mnt/data/downloads/content
+filedir = /mnt/data/downloads/files
 appdir = /mnt/data/downloads/files/apps
 unpackdir = /mnt/data/librarian/zipballs/.unpack
 contentdir = /mnt/data/librarian/zipballs
