--- a/apps/librarian/Makefile
+++ b/apps/librarian/Makefile
@@ -1,7 +1,7 @@
 TOP_DIR := $(shell pwd)
 -include $(TOP_DIR)/../Makefile.in
 
-PKG_VERSION = 76edea97bd6d26ea17bdd4f691d9161ad949b6f5
+PKG_VERSION = v0.4.post1
 PKG_TGZ = librarian-$(PKG_VERSION).tar.gz
 PKG_URL = https://github.com/Outernet-Project/librarian/archive/$(PKG_VERSION).tar.gz
 
