--- a/apps/librarian/Makefile
+++ b/apps/librarian/Makefile
@@ -1,7 +1,7 @@
 TOP_DIR := $(shell pwd)
 -include $(TOP_DIR)/../Makefile.in
 
-PKG_VERSION = e3a223d5dad34a0ebe07049d3bb32e7d6fa3e26b
+PKG_VERSION = v0.4.post4
 PKG_TGZ = librarian-$(PKG_VERSION).tar.gz
 PKG_URL = https://github.com/Outernet-Project/librarian/archive/$(PKG_VERSION).tar.gz
 
