--- a/apps/librarian/librarian.ini
+++ b/apps/librarian/librarian.ini
@@ -29,6 +29,17 @@ covers = /mnt/data/librarian/zipballs/.covers
 backend = in-memory
 timeout = 0
 
+[storage]
+# Minimum space needed on storage at all times. Values can be specified without
+# a suffix, in which case it is treated as bytes, or with B, KB, MB, and GB
+# suffixes (case-insensitive), for bytes, kilobytes, megabytes, and gigabytes,
+# respectively.
+minfree = 1GB
+
+# Authorize automatic cleanup of content library if disk space is needed
+auto_cleanup = no
+
+
 [plugins]
 tvheadend = no
 ondd = yes
