Moved update markers to persist partition
Because the update markers are symlinks, we have moved them to /mnt/persist so
they don't end up on filesystems that do not support links (e.g., FAT32).

Signed-off-by: Branko Vukelic <branko@outernet.is>

--- a/apps/librarian/librarian.ini
+++ b/apps/librarian/librarian.ini
@@ -21,7 +21,7 @@ path = /mnt/data/librarian
 spooldir = /mnt/data/downloads/content
 filedir = /mnt/data/downloads/files
 appdir = /mnt/data/downloads/files/apps
-unpackdir = /mnt/data/librarian/zipballs/.unpack
+unpackdir = /mnt/persist/librarian_unpack
 contentdir = /mnt/data/librarian/zipballs
 covers = /mnt/data/librarian/zipballs/.covers
 
